--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
+    "material": "^0.5.3",
+    "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.11.2",
     "sass": "^1.62.1",
-    "styled-components": "^6.0.0-rc.2"
+    "styled-components": "^6.0.0-rc.2",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
