--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_API_SINGLE_CHARACTER=https://rickandmortyapi.com/api/character/
-VITE_API_FILTER_CHARACTER=https://rickandmortyapi.com/api/character/?name=
+VITE_BASE_API=https://rickandmortyapi.com/api/
